--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
   "name": "pool-control",
   "version": "0.0.1-alpha",
-  "main": "app.js",
   "scripts": {
-    "start": "ng --host serve",
-    "build": "ng build --watch --configuration development",
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "electron": "ng build --base-href ./ --configuration production && electron --disable-gpu ."
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.4",
-    "@angular/cdk": "^12.0.0",
-    "@angular/common": "~12.0.4",
-    "@angular/compiler": "~12.0.4",
-    "@angular/core": "~12.0.4",
-    "@angular/forms": "~12.0.4",
-    "@angular/platform-browser": "~12.0.4",
-    "@angular/platform-browser-dynamic": "~12.0.4",
-    "@angular/router": "~12.0.4",
-    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@angular/animations": "12.2.13",
+    "@angular/cdk": "12.2.13",
+    "@angular/common": "12.2.13",
+    "@angular/compiler": "12.2.13",
+    "@angular/core": "12.2.13",
+    "@angular/forms": "12.2.13",
+    "@angular/platform-browser": "12.2.13",
+    "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/router": "12.2.13",
+    "@fortawesome/fontawesome-free": "5.15.1",
     "material-icons-fontface": "^55.0.0",
-    "mdb-angular-ui-kit": "file:mdb-angular-ui-kit-1.0.0-beta8.tgz",
+    "mdb-angular-ui-kit": "1.6.0",
     "ngx-material-timepicker": "^5.5.3",
-    "rxjs": "~6.6.0",
-    "simple-keyboard": "^3.2.26",
+    "rxjs": "6.6.0",
+    "simple-keyboard": "^3.4.33",
     "sockette": "^2.0.6",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "tslib": "2.1.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.4",
-    "@angular/cli": "~12.0.4",
-    "@angular/compiler-cli": "~12.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "electron": "^6.0.1",
-    "jasmine-core": "~3.8.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "@angular-devkit/build-angular": "12.2.13",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
+    "@angular/cli": "12.2.13",
+    "@angular/compiler-cli": "12.2.13",
+    "@types/node": "12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "eslint": "7.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "typescript": "4.2.3"
   }
 }
