--- a/package.json
+++ b/package.json
@@ -32,18 +32,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.2.13",
-    "@angular-eslint/builder": "12.7.0",
-    "@angular-eslint/eslint-plugin": "12.7.0",
-    "@angular-eslint/eslint-plugin-template": "12.7.0",
-    "@angular-eslint/schematics": "12.7.0",
-    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "eslint": "7.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "6.8.0",
+    "prettier": "2.5.1",
     "typescript": "4.2.3"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
