--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "package": "ng build --prod --base-href 'poolpi-angular'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.2.13",
-    "@angular/cli": "12.2.13",
+    "@angular/cli": "^14.0.2",
     "@angular/compiler-cli": "12.2.13",
     "@types/node": "12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
@@ -41,5 +42,5 @@
     "prettier": "2.5.1",
     "typescript": "4.2.3"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.2.1"
 }
